# CatMatch

./: .dockerignore  .gitignore  Dockerfile  README.md  cnn_test.ipynb  embedding.csv  generate_image_indices.py  image_paths.json  movie_dataset.ipynb  pandas-intro.md  pyproject.toml  ulrik.ipynb  vgg3.ipynb
catmatch/: serve.py
catmatch/cnn/dataloaders/: catbreeds.py
catmatch/cnn/models/: vgg.py
catmatch/cnn/preprocessing/: get_image_embeddings.py  image_embeddings.py  image_embeddingsv2.py
catmatch/cnn/utils/: nn_manager.py
catmatch/recsys/: content_based.py
catmatch/server/: endpoints.py  utils.py
